--- a/analiseficha.html
+++ b/analiseficha.html
@@ -690,10 +690,49 @@ async function abrirModal(p){
   mFoto.src = p.foto_url || "";
 
   /* INGREDIENTES */
-  const { data: itens } = await sb
-    .from("buffet_itens")
-    .select("*")
-    .eq("buffet_id", p.id);
+const { data: itens } = await sb
+  .from("buffet_itens")
+  .select(`
+    id,
+    nome,
+    quantidade,
+    unidade_uso,
+    custo_calculado,
+    produto:produtos (
+      energia_kcal,
+      carboidratos,
+      proteinas,
+      gorduras_totais,
+      fibra_alimentar,
+      sodio_mg
+    )
+  `)
+  .eq("buffet_id", p.id);
+// ===============================
+// CALCULO FICHA NUTRICIONAL
+// ===============================
+const nutri = {
+  calorias: 0,
+  carboidratos: 0,
+  proteinas: 0,
+  gorduras: 0,
+  fibras: 0,
+  sodio: 0
+};
+
+(itens || []).forEach(i => {
+  const qtd = Number(i.quantidade || 0);
+  const prod = i.produto;
+  if (!prod) return;
+
+  nutri.calorias     += Number(prod.energia_kcal || 0) * qtd;
+  nutri.carboidratos += Number(prod.carboidratos || 0) * qtd;
+  nutri.proteinas    += Number(prod.proteinas || 0) * qtd;
+  nutri.gorduras     += Number(prod.gorduras_totais || 0) * qtd;
+  nutri.fibras       += Number(prod.fibra_alimentar || 0) * qtd;
+  nutri.sodio        += Number(prod.sodio_mg || 0) * qtd;
+});
+
 
   const cmvBase = itens.reduce(
     (s,i)=>s + Number(i.custo_calculado||0),0
@@ -871,6 +910,18 @@ mBody.innerHTML = `
       onclick="salvarImposto()">ADICIONAR</button>
   </div>
 <hr>
+<hr>
+
+<h3>Tabela Nutricional (por prato)</h3>
+
+<div class="precificacao">
+  <p>🔥 Calorias: <b>${nutri.calorias.toFixed(1)} kcal</b></p>
+  <p>🥩 Proteínas: <b>${nutri.proteinas.toFixed(1)} g</b></p>
+  <p>🍞 Carboidratos: <b>${nutri.carboidratos.toFixed(1)} g</b></p>
+  <p>🧈 Gorduras: <b>${nutri.gorduras.toFixed(1)} g</b></p>
+  <p>🌾 Fibras: <b>${nutri.fibras.toFixed(1)} g</b></p>
+  <p>🧂 Sódio: <b>${nutri.sodio.toFixed(1)} mg</b></p>
+</div>
 
 <h3>Modo de preparo</h3>
 
